# ts_project_relative_imports

./: BUILD.bazel  README.md  WORKSPACE.bazel  foo.ts  my_rule.bzl  package-lock.json  package.json  tsconfig.json
dir/: BUILD.bazel  file.ts
